--- a/movies/app/components/create-movie.html
+++ b/movies/app/components/create-movie.html
@@ -6,13 +6,13 @@
  </div>
 <div>
     <form name="movieForm" class="form-horizontal" ng-submit="createMovieController.createMovie()">
-
-        <div class="form-group">
+        <input type="hidden" id="id" ng-model="createMovieController.movie.id" readonly>
+       <!-- <div class="form-group">
             <label class="control-label col-sm-1" for="id">Id</label>
             <div class="col-sm-10">
                 <input type="text" class="form-control" id="id" placeholder="Enter id" ng-model="createMovieController.movie.id" readonly>
             </div>
-        </div>
+        </div>-->
         <div class="form-group">
             <label class="control-label col-sm-1" for="title">Title</label>
             <div class="col-sm-10">
